# stockpilot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
.superpowers/brainstorm/227787-1776408459/: reliability-architecture.html  reliability-dataflow-cache.html  reliability-fallback-errors.html
config/: settings.yaml
data/cache/: stockpilot_reliability.sqlite3
docs/knowledge/: reading_list.md
docs/superpowers/plans/: 2026-04-17-data-reliability.md
docs/superpowers/specs/: 2026-04-17-data-reliability-design.md
src/stockpilot/: __init__.py  cli.py  config.py
src/stockpilot/agents/: memory.py  stats.py
src/stockpilot/agents/core/: analysts.py
src/stockpilot/agents/graph/: orchestrator.py  state.py
src/stockpilot/agents/llm/: providers.py
src/stockpilot/agents/personas/: investors.py
src/stockpilot/agents/risk_mgmt/: debaters.py
src/stockpilot/agents/tools/: agent_tools.py
src/stockpilot/analysis/: charts.py  indicators.py  patterns.py  portfolio.py  signals.py
src/stockpilot/api/: main.py
src/stockpilot/backtesting/: engine.py
src/stockpilot/data/: __init__.py  cache.py  errors.py  manager.py  models.py  runtime.py
src/stockpilot/data/adapters/: __init__.py  akshare_adapter.py  yfinance_adapter.py
src/stockpilot/data/reliability/: __init__.py  gateway.py  registry.py  shield.py  store.py  types.py
src/stockpilot/mcp/: server.py
src/stockpilot/news/: aggregator.py
src/stockpilot/notifications/: dispatcher.py
src/stockpilot/scheduler/: runner.py
src/stockpilot/trading/: engine.py
src/stockpilot/trading/strategies/: library.py
src/stockpilot/web/static/css/: app.css
src/stockpilot/web/static/js/: agent.js  analysis.js  app.js  backtest.js  charts.js  compare.js  portfolio.js  state.js
src/stockpilot/web/templates/: index.html
tests/: conftest.py  reliability_fakes.py  test_api_reliability.py  test_api_v2.py  test_cli_reliability.py  test_reliability_config.py  test_reliability_gateway.py  test_reliability_store.py  test_smoke.py
